<resources>
    <string name="app_name">Helpdesk</string>
    <string name="userName">Nazwa użytkownika</string>
    <string name="userNameHint">Login</string>
    <string name="userPassword">Twoje Hasło</string>
    <string name="userPasswordHint">Hasło</string>
    <string name="userLogging">Zaloguj</string>
    <string name="userLogout">Wyloguj</string>
    <string name="myProblems">Moje Zgłoszenia</string>
    <string name="myAccount">Moje dane</string>
    <string name="loggedUserName">Moje dane</string>
    <string name="loggedUserSurname">Moje dane</string>
    <string name="loggedUserLogin">Moje dane</string>
    <string name="loggedUserEmail">Moje dane</string>

</resources>
