<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_menu"
    android:background="@drawable/background"
    >


    <Button
        android:text="@string/myAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMyProblems"
        android:layout_marginTop="26dp"
        android:id="@+id/buttonMyAccount"
        android:background="@color/myAccount"
        android:textColor="@android:color/background_light"
        android:layout_alignLeft="@+id/buttonMyProblems"
        android:layout_alignStart="@+id/buttonMyProblems"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <Button
        android:text="@string/userLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMyAccount"
        android:layout_alignLeft="@+id/buttonMyAccount"
        android:layout_alignStart="@+id/buttonMyAccount"
        android:layout_marginTop="26dp"
        android:id="@+id/buttonLogOut"
        android:background="@color/logOut"
        android:textColor="@android:color/background_light"
        android:layout_alignRight="@+id/buttonMyAccount"
        android:layout_alignEnd="@+id/buttonMyAccount" />

    <Button
        android:text="@string/myProblems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="109dp"
        android:id="@+id/buttonMyProblems"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:text="Zalogowano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="123dp"
        android:id="@+id/textView7"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="NazwaUsera"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/showMessage"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

</RelativeLayout>